--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
     "html-webpack-plugin": "^4.5.0",
-    "phaser": "^3.24.1",
     "stylelint": "13.3.x",
     "stylelint-config-standard": "20.0.x",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "3.17.x",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {
+    "phaser": "^3.24.1"
   }
 }
