Add grass and trees to the tilemap, also the character is changed for a girl

--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@babel/preset-env": "^7.12.10",
     "babel-eslint": "10.1.x",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "stylelint": "13.3.x",
     "stylelint-config-standard": "20.0.x",
     "stylelint-csstree-validator": "^1.9.0",
