--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "babel-eslint": "10.1.x",
     "babel-loader": "^8.2.2",
@@ -32,6 +33,7 @@
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "phaser": "^3.24.1"
   }
 }
