--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-eslint": "10.1.x",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^5.0.1",
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
@@ -39,5 +41,14 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "phaser": "^3.24.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "transform": {
+      "\\.[jt]sx?$": "babel-jest"
+    }
   }
 }
